# flow_graph_editor

./: CMakeLists.txt  README.md  fileio.cpp  fileio.h  gridnode.cpp  main.cpp
assets/: in_item.qml  node.qml  node_logic.js  node_types.json  scene_logic.js
qml/: arg_item.qml  drag_bezier.js  line.qml  main.qml  out_item.qml
src/: beziercurve.cpp  beziercurve.h  grid_item.cpp  grid_item.h  gridnode.h
